<resources>
    <string name="app_name">CryptoApp</string>
    <string name="last_updated_time">Время последнего обновления: %s</string>
    <string name="coin_currency">%s / %s</string>
    <string name="detail_updated">Обновлено:</string>
    <string name="detail_last_deal">Последняя сделка:</string>
    <string name="detail_max_per_day">Максимум за день:</string>
    <string name="detail_min_per_day">Минимум за день:</string>
    <string name="detail_price">Цена:</string>
    <string name="detail_slash">/</string>
</resources>